# xcvr-emu

./: .dockerignore  .flake8  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build_publish_container_image.yml  ci.yml  release-please.yml
docs/: xcvr-emush.md
src/cmis/: __init__.py  cmis.py  field.py
src/cmis/base/: __init__.py  base.py  gen.py
src/cmis/base/tables/: 00h_administrative_information.py  00h_application_descriptor_registers.py  00h_cable_assembly_information.py  00h_cdb_status_fields.py  00h_copper_cable_attenuation.py  00h_fault_information.py  00h_global_status_information.py  00h_lane_level_flags_summary.py  00h_management_characteristics.py  00h_module_active_firmware_version.py  00h_module_global_controls.py  00h_module_level_masks.py  00h_page_mapping_register_components.py  00h_password_change_entry.py  01h_additional_state_machine_durations_adversiting.py  01h_durations_advertising.py  01h_module_inactive_firmware_and_hardware_revisions.py  01h_supported_controls_advertisement.py  01h_supported_flags_advertisement.py  01h_supported_monitors_advertisement.py  01h_supported_pages_advertising.py  01h_supported_signal_integrity_controls_advertisement.py  01h_wavelength_information.py  10h_lane_specific_direct_effect_control_fields.py  10h_lane_specific_masks.py  10h_staged_control_set_apply_triggers.py  10h_staged_control_set_tx_controls.py  10h_staged_control_set_unidirectional_apply_triggers.py  11h_configuration_command_status_registers.py  11h_data_path_conditions.py  11h_lane_specific_rx_flags.py  8_10_module_level_monitor_values.py  8_11_module_global_controls.py  8_12_module_level_masks.py  (+26 more)
src/cmis/optoe/: __init__.py  eeprom.py
src/xcvr_emu/: config.yaml  dpsm.py  server.py  xcvr_emud.py  xcvr_emush.py
src/xcvr_emu/cli/: base.py
src/xcvr_emu/client/: root.py  transceiver.py
src/xcvr_emu/eeprom/: __init__.py  eeprom.py  sonic_xcvr
src/xcvr_emu/proto/: __init__.py  emulator.proto  emulator_pb2.py  emulator_pb2.pyi  emulator_pb2_grpc.py
src/xcvr_emu/transceiver/: __init__.py  transceiver.py
tests/: test_xcvr_emu_eeprom.py  test_xcvr_emu_raw_eeprom.py  test_xcvr_emu_server.py  test_xcvr_emu_transceiver.py  test_xcvr_emu_xcvr.py  test_xcvr_emu_xcvr_eeprom.py
tests/cmis/: eeprom_hexdump.txt  test_base.py  test_gen.py  test_optoe.py
tests/cmis/tables/: test_tables.py
tests/docker/: test_xcvr_emush.py
tests/xcvr_emu/: test_xcvr_emu_cli.py  test_xcvr_emu_emud.py  test_xcvr_emu_server.py  test_xcvr_emu_transceiver.py
xcvr_emu/: dpsm.py  xcvr.py  xcvr_emud.py  xcvr_emush.py
xcvr_emu/cli/: __init__.py  base.py
xcvr_emu/client/: shell.py
xcvr_emu/eeprom/: __init__.py  eeprom.py  sonic_xcvr
xcvr_emu/proto/: emulator.proto  emulator_pb2_grpc.py
