[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xcvr-emu"
version = "1.0.1"
description = "A package for transceiver emulation"
authors = [{ name = "Wataru Ishida", email = "wataru.ishid@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["transceiver", "emulation", "network"]

dependencies = ["grpcio", "prompt-toolkit", "protobuf", "PyYAML"]

[project.scripts]
xcvr-emud = "xcvr_emu.xcvr_emud:main"
xcvr-emush = "xcvr_emu.xcvr_emush:main"

[project.optional-dependencies]
dev = [
  "ruff",
  "grpcio-tools",
  "pytest",
  "pytest-asyncio",
  "mypy",
  "types-protobuf",
  "mypy-protobuf",
  "pip-tools",
  "types-PyYAML",
  "jinja2",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
xcvr_emu = ["config.yaml"]


[tool.ruff]
exclude = ["submodules", "src/xcvr_emu/proto", ".venv"]

line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E203", "E501", "E701", "E741"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["musubi_restapi"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
split-on-trailing-comma = true

[tool.pytest.ini_options]
addopts = ["--ignore=submodules"]

[tool.mypy]
ignore_missing_imports = true
